--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Hertzy</title>
     </head>
     <body>
-        The content of Hertzy documentation ......
+        The content of Hertzy documentation  ...
     </body>
 </html>
